<resources>
    <string name="app_name">EjercicioBBDD</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genero">Genero</string>
    <string name="a_o">Año</string>
    <string name="titulo">Titulo</string>
    <string name="fecha_visionado">Fecha Visionado</string>
    <string name="insertar">INSERTAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="medio_de_visionado">Medio de Visionado</string>
    <string name="modificar">MODIFICAR</string>
</resources>