<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">

    <Button
        android:id="@+id/bEliminar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="104dp"
        android:text="@string/eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bInsertar"
        app:layout_constraintStart_toStartOf="@+id/bModificar"
        app:layout_constraintTop_toBottomOf="@+id/bModificar" />

    <TextView
        android:id="@+id/tvMedio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="59dp"
        android:hint="@string/medio_de_visionado"
        app:layout_constraintBottom_toTopOf="@+id/bInsertar"
        app:layout_constraintEnd_toEndOf="@+id/etnPuntuacion"
        app:layout_constraintStart_toStartOf="@+id/etnPuntuacion"
        app:layout_constraintTop_toBottomOf="@+id/etnPuntuacion" />

    <EditText
        android:id="@+id/etnPuntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="Puntuación"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/tvMedio"
        app:layout_constraintStart_toStartOf="@+id/etdFechaVisionado"
        app:layout_constraintTop_toBottomOf="@+id/etdFechaVisionado" />

    <TextView
        android:id="@+id/tvGenero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="9dp"
        android:hint="@string/genero"
        app:layout_constraintBottom_toTopOf="@+id/etdFechaVisionado"
        app:layout_constraintEnd_toEndOf="@+id/etnAnyo"
        app:layout_constraintStart_toStartOf="@+id/etnAnyo"
        app:layout_constraintTop_toBottomOf="@+id/etnAnyo" />

    <EditText
        android:id="@+id/etnAnyo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/a_o"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/tvGenero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/titulo"
        app:layout_constraintBottom_toTopOf="@+id/etnAnyo"
        app:layout_constraintEnd_toEndOf="@+id/etnAnyo"
        app:layout_constraintStart_toStartOf="@+id/etnAnyo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etdFechaVisionado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:hint="@string/fecha_visionado"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/etnPuntuacion"
        app:layout_constraintStart_toStartOf="@+id/tvGenero"
        app:layout_constraintTop_toBottomOf="@+id/tvGenero" />

    <Button
        android:id="@+id/bInsertar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:text="@string/insertar"
        app:layout_constraintBottom_toTopOf="@+id/bModificar"
        app:layout_constraintEnd_toEndOf="@+id/bModificar"
        app:layout_constraintStart_toStartOf="@+id/bModificar"
        app:layout_constraintTop_toBottomOf="@+id/tvMedio" />

    <Button
        android:id="@+id/bModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:layout_marginBottom="29dp"
        android:text="@string/modificar"
        app:layout_constraintBottom_toTopOf="@+id/bEliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bInsertar" />

</androidx.constraintlayout.widget.ConstraintLayout>